[project]
name = "link-prediction"
version = "0.0.2"
authors = [
  { name="Alec Noppe", email="alec@noppe.ai" },
]
description = "Link prediction in Python."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
"networkx",
"numpy",
"pandas",
"matplotlib"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/alecnoppe/link-prediction"

